# bodsky-archiver

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
devcontainer/: devcontainer.json
examples/fetch-dids/: main.rs  profile.rs
src/: bluesky.rs  config.rs  lib.rs  main.rs  twitter.rs
tests/: test.rs  twitter_request.rs
