[package]
name = "bodsky-archiver"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "MIT"
authors = ["Pierre Marshall <pierre.marshall@bodleian.ox.ac.uk>"]
repository = "https://github.com/extua/bodsky-archiver"
description = "Test project for archiving social media posts at the Bodleian Libraries."

[dependencies]
reqwest = { version = "0.12.12", features = [
    "json",
    "rustls-tls",
    "gzip",
], default-features = false }
tokio = { version = " 1.43.0", features = ["full"] }
serde_json = "1.0.138"
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.39"
dotenvy = "0.15"
anyhow = "1.0.95"

[dev-dependencies]
httpmock = "0.7.0"
