[package]
name = "bodsky-archiver"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Pierre Marshall <pierre.marshall@bodleian.ox.ac.uk>"]
repository = "https://github.com/extua/bodsky-archiver"
description = "Test project for archiving social media posts at the Bodleian Libraries."

[dependencies]
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
    "gzip",
], default-features = false }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
dotenvy = "0.15"
anyhow = "1.0.97"

[dev-dependencies]
httpmock = "0.7.0"

[profile.release]
# magic incantations to produce speedier release builds
strip = "symbols"
lto = true
codegen-units = 1